--- a/.platform.app.yaml
+++ b/.platform.app.yaml
@@ -20,8 +20,8 @@ relationships:
 # The configuration of app when it is exposed to the web.
 hooks:
     build: |
-        yarn add socket.io
-        npm run build  
+        npm install socket.io
+        npm install express 
 web:
   commands:
    start: "node index.js"
